# distro-builder

./: .gitignore  Cargo.toml  README.md
docs/: 00_MIGRATION_INDEX.md  01_MIGRATION_FEDORA_SWAP.md  02_MIGRATION_BOOTC.md  03_MIGRATION_STAGELESS.md  04_MIGRATION_RING_MODEL.md  05_MIGRATION_RING_EXECUTION_MODEL.md  06_MIGRATION_VARIANT_LAYOUT.md
install-split-pane/: Cargo.toml
install-split-pane/src/: main.rs
recipes/: alpine-live-source-rootfs.rhai  alpine-preseed-source-assets.rhai  alpine-preseed-stage01-assets.rhai  alpine-stage01-rootfs.rhai  custom-source-rootfs.rhai  custom-stage01-rootfs.rhai  dvd-source-deps.rhai  fedora-dvd-source-rootfs.rhai  fedora-preseed-iso.rhai  fedora-stage01-rootfs.rhai  leviso-deps.rhai  linux-base.rhai  linux-deps.rhai  linux-prebuilt.rhai  linux.rhai  mock-build-stdout-test.rhai  qemu-deps.rhai  rocky-deps.rhai  rocky-preseed-iso.rhai  rocky-stage01-rootfs.rhai  stage01-dvd-deps.rhai
src/: build_host.rs  cache.rs  lib.rs  process.rs  qemu.rs  run_history.rs  stage_runs.rs
src/alpine/: busybox.rs  context.rs  extract.rs  filesystem.rs  firmware.rs  keys.rs  mod.rs  modules.rs  ssh.rs
src/artifact/: cpio.rs  filesystem.rs  initramfs.rs  iso.rs  iso_utils.rs  live_overlay.rs  mod.rs  overlayfs.rs  rootfs.rs  squashfs.rs
src/artifact_store/: mod.rs
src/compat_inputs/: mod.rs
src/component/: mod.rs
src/contracts/: component.rs  context.rs  kernel.rs  mod.rs
src/executor/: binaries.rs  directories.rs  files.rs  mod.rs  openrc.rs  users.rs
src/pipeline/: config.rs  io.rs  kernel.rs  (+9 more)
stage02-split-pane/: Cargo.toml
(+19 files in other folders)
